@@ -42,29 +42,29 @@ import com.noelios.restlet.http.HttpServerHelper;
  * configuration for your Restlet webapp:
  * 
  * <pre>
- *                           &lt;?xml version=&quot;1.0&quot; encoding=&quot;ISO-8859-1&quot;?&gt;
- *                           &lt;!DOCTYPE web-app PUBLIC &quot;-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN&quot; &quot;http://java.sun.com/dtd/web-app_2_3.dtd&quot;&gt;
- *                           &lt;web-app&gt;
- *                                &lt;display-name&gt;Restlet adapter&lt;/display-name&gt;
- *                           
- *                                &lt;!-- Your application class name --&gt;
- *                                &lt;context-param&gt;
- *                                        &lt;param-name&gt;org.restlet.application&lt;/param-name&gt;
- *                                        &lt;param-value&gt;com.noelios.restlet.test.TraceApplication&lt;/param-value&gt;
- *                                &lt;/context-param&gt;
- *                           
- *                                &lt;!-- Restlet adapter --&gt;
- *                                &lt;servlet&gt;
- *                                        &lt;servlet-name&gt;ServerServlet&lt;/servlet-name&gt;
- *                                        &lt;servlet-class&gt;com.noelios.restlet.ext.servlet.ServerServlet&lt;/servlet-class&gt;
- *                                &lt;/servlet&gt;
- *                           
- *                                &lt;!-- Catch all requests --&gt;
- *                                &lt;servlet-mapping&gt;
- *                                        &lt;servlet-name&gt;ServerServlet&lt;/servlet-name&gt;
- *                                        &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
- *                                &lt;/servlet-mapping&gt;
- *                           &lt;/web-app&gt;}
+ *                            &lt;?xml version=&quot;1.0&quot; encoding=&quot;ISO-8859-1&quot;?&gt;
+ *                            &lt;!DOCTYPE web-app PUBLIC &quot;-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN&quot; &quot;http://java.sun.com/dtd/web-app_2_3.dtd&quot;&gt;
+ *                            &lt;web-app&gt;
+ *                                 &lt;display-name&gt;Restlet adapter&lt;/display-name&gt;
+ *                            
+ *                                 &lt;!-- Your application class name --&gt;
+ *                                 &lt;context-param&gt;
+ *                                         &lt;param-name&gt;org.restlet.application&lt;/param-name&gt;
+ *                                         &lt;param-value&gt;com.noelios.restlet.test.TraceApplication&lt;/param-value&gt;
+ *                                 &lt;/context-param&gt;
+ *                            
+ *                                 &lt;!-- Restlet adapter --&gt;
+ *                                 &lt;servlet&gt;
+ *                                         &lt;servlet-name&gt;ServerServlet&lt;/servlet-name&gt;
+ *                                         &lt;servlet-class&gt;com.noelios.restlet.ext.servlet.ServerServlet&lt;/servlet-class&gt;
+ *                                 &lt;/servlet&gt;
+ *                            
+ *                                 &lt;!-- Catch all requests --&gt;
+ *                                 &lt;servlet-mapping&gt;
+ *                                         &lt;servlet-name&gt;ServerServlet&lt;/servlet-name&gt;
+ *                                         &lt;url-pattern&gt;/*&lt;/url-pattern&gt;
+ *                                 &lt;/servlet-mapping&gt;
+ *                            &lt;/web-app&gt;}
  * </pre>
  * 
  * The enumeration of initParameters of your Servlet will be copied to the
@@ -76,12 +76,6 @@ import com.noelios.restlet.http.HttpServerHelper;
  * @author Jerome Louvel (contact@noelios.com)
  */
 public class ServerServlet extends HttpServlet {
-    /**
-     * The Servlet context initialization parameter's name containing the
-     * application's class name to use to create the application instance.
-     */
-    public static final String NAME_APPLICATION_CLASS = "org.restlet.application";
-
     /**
      * The Servlet context initialization parameter's name containing the name
      * of the Servlet context attribute that should be used to store the HTTP
@@ -170,7 +164,7 @@ public class ServerServlet extends HttpServlet {
                         }
                     } else {
                         log("[Noelios Restlet Engine] - The ServerServlet couldn't find the target class name. Please set the initialization parameter called "
-                                + NAME_APPLICATION_CLASS);
+                                + Application.KEY);
                     }
                 }
                 this.helper = result;
@@ -225,8 +219,7 @@ public class ServerServlet extends HttpServlet {
         Application application = null;
         // Try to instantiate a new target application
         // First, find the application class name
-        String applicationClassName = getInitParameter(NAME_APPLICATION_CLASS,
-                null);
+        String applicationClassName = getInitParameter(Application.KEY, null);
 
         // Load the application class using the given class name
         if (applicationClassName != null) {
