@@ -18,6 +18,7 @@
 
 package com.noelios.restlet.application;
 
+import org.restlet.Application;
 import org.restlet.Uniform;
 import org.restlet.data.Protocol;
 import org.restlet.data.Request;
@@ -58,9 +59,9 @@ public class ApplicationDispatcher extends Uniform {
                     "Unable to determine the protocol to use for this call.");
         } else {
             // Add the application in request and response attributes
-            request.getAttributes().put("org.restlet.application",
+            request.getAttributes().put(Application.KEY,
                     this.applicationContext.getApplication());
-            response.getAttributes().put("org.restlet.application",
+            response.getAttributes().put(Application.KEY,
                     this.applicationContext.getApplication());
 
             if (protocol.equals(Protocol.WAR)) {
