@@ -148,7 +148,7 @@ public class HttpCall {
     public ConnectorService getConnectorService(Request request) {
         ConnectorService result = null;
         Application application = (Application) request.getAttributes().get(
-                "org.restlet.application");
+                Application.KEY);
 
         if (application != null) {
             result = application.getConnectorService();
