@@ -27,6 +27,7 @@ Changes log
  - Added init(Context, Request, Response) method and default constructor to Resource.
  - Finder now looks for a default Resource constructor if the current one (with 3 args) couldn't be found.
    Suggested by Diggory Briercliffe, Brandon Lonac, Sean Landis and Ryan Daum.
+ - Added Application.KEY string constant containing the reseverved application attribute key.
   
 [Enhancements] 
  - Updated FreeMarker to version 2.3.9.
